fixed align on logo

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -26,7 +26,7 @@ header {
 }
 
 .logo img {
-	justify-self: flex start;
+	align-self: flex start;
 	margin: 0 0.25rem 0 1rem;
 	width: 64px;
 	height: auto;
